# call-ai-backend

./: .dockerignore  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
api-server/: Cargo.toml
api-server/.sqlx/: query-009a787c0bbd0152ba3443de21dea92bfe09648b3ad80f3288261c120fec7bc5.json  query-1bf0e709f0b9c24cca9ac1c3000a47485c9ec09f88f55ae95382898f794afe66.json  query-2d228dcdc83493f2d037c0b28825ff92c233064f9ac855dfeac76f8f3164a2d3.json  query-3806c123f903d5f902a796e1ebe487c53efb6dafd19eb4fbd1a807b31384e783.json  query-43e97a6752242692df2ea1c94f87783f019fbb9f6460ebd6d91518d48693a352.json  query-50885902098d356e8a253de6f1a7835898de3c1ba9567046590061275c1f0803.json  query-588661559e5b9bf810c4c3139eeeadd1a1c9e23d1f2158f63ee13d50e2811b2e.json  query-5f2108f55c698dacd7f59ce49578fe67f6b92f087053ba180b1ab4794d016847.json  query-629b3254a947043c65311c2f879ca4ecb18649d6b2f1fd9f79e390e5c97c9335.json  query-655889e1231c7670e5424797e84f92aa531ad53a30f38a3fe5a27db0b2781d3a.json  query-8082636cd1e9cc06d93e9f7b030ae403f3e18e3f48806e2b75916e75b38c4a0b.json  query-83c69b1277027d7314ff31c9bcbb6d7fb64a146082aa85522815a212f08c8908.json  query-a19e0f71637a63a8412de6180a83d8f9924c8e51a82c5e9668e9207cfa8990bd.json  query-b0cc432a1e1328518686f47a41124ac698963964497fa17529282c312b204e62.json  query-d33c530a115895bcb07e23291c7fec9aa941b7d07405de049712e4f30d95b4cd.json  query-e896ef36c727f881a9e02be8b1fe58b780aa15b9d1f4fa23c691534e0e28173d.json
api-server/deploy/: Chart.yaml  values-dev.yaml
api-server/deploy/templates/: _helpers.tpl  cm.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
api-server/docker/: Dockerfile  migration.dockerfile
api-server/migrations/: 20241016040612_initial.down.sql  20241016040612_initial.up.sql  20241016203225_init_dict.up.sql  20241021231736_add_task_result.up.sql  20241022230455_init_settings.up.sql  20241101142209_add_indexes.up.sql
api-server/src/: config.rs  context.rs  error.rs  main.rs
api-server/src/clients/: worker.rs
api-server/src/db/: metrics.rs  (+2 more)
protocol/: Cargo.toml  README.md
protocol/.sqlx/: query-2355119e155ea307bec27ccc02764d1a03841fd6a7a231ae22aaee86292e1a4e.json  query-2ae95148bc5eef9a4df3c1383a67c736c97c72ab1f5fa505666089761bb0b259.json  query-6d53bcb5aee72288c220189d8abc55acfc32486f83ca727568401fc3c5330f6e.json  query-702a4fd27edccc98832c2c0d97aaf24d10f4b305821c936934917a9d86600b4e.json  query-73c497b2b294320c2421d183ddd2839b72fcc41617d18455abb6cfe5fbf80af3.json  query-7707993f78468638d87d2dc61fd95c57c54d527d82e4e84e1e5c6225195fae63.json  query-862911c5ce0e3c71ac45f40bf5d48336d5e5d538cdef482693eb016791115758.json  query-8e65ccce115417d3022eb36c2b95e3b06c334909a493449c68ce1fb4e5427344.json  query-917924efd38a03d50e6d710aac2df5b68536d980c35040ab60a136cf972eef82.json  query-999f9eb508fbae5bbfbaf897735e93456fa58cf8d4e73e800336f88d015e5bcd.json  query-ce7a7d1a1aeee81a601111ecdc834f14ee1f799733259a4c49294b133e3fbc72.json  query-eb1a64ad02c203ec62eb7bfc6343fe8773b98459c6e14055ed2766782894f649.json  query-f3c3ee714719afb922f500aae4399835d572d4c1b7994c6075072e2d38ee459d.json  query-fa32b479bac90624f454e0b058a82f708734cf5397a367110bd645c2caa91fd4.json  query-fb53fa9e51540a19ddeec542695c9943c6c3cac4312b188716e577364a1239f9.json  query-fff6b022c99736cdc3fa97dea1fd6046e088b340944ade05d03646be3fbfec9f.json
protocol/src/: auxiliary.rs  lib.rs
worker/: Cargo.toml
worker/deploy/: Chart.yaml  values-dev.yaml
worker/docker/: Dockerfile
worker/src/: config.rs  context.rs  handlers.rs  indexer.rs  main.rs  pipe.rs
(+29 files in other folders)
