[package]
name = "protocol"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sqlx = { version = "0.8", features = [
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "runtime-tokio-native-tls",
] }
uuid = { version = "1.10", features = [
    "v4",
    "serde",
    "fast-rng",
]}
utoipa = { version = "5.1.3", features = ["uuid", "debug" ] }

[features]
test = []
