[package]
name = "worker"
version = "0.1.2"
authors = ["Pavel Zuev <paul.s.zuev@gmail.com>"]
description = "Call-ai task worker"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
futures = "0.3"
http = "1"
humantime-serde = "1"
lapin = "2.5"
once_cell = "1.20"
protocol = { path = "../protocol" }
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "runtime-tokio-native-tls",
] }
thiserror = "1"
tantivy = "0.22"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time", "env-filter"] }
uuid = { version = "1.10", features = [
    "v4",
    "serde",
    "fast-rng",
]}
url = { version = "2", features = ["serde"] }

[dev-dependencies]
mockall = "0.13"
testcontainers = "0.23"
protocol = { path = "../protocol", features = ["test"] }
